# jwtauth

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml  python-test.yml
src/jwtauth/: __init__.py  admin.py  manager.py  middleware.py  models.py  settings.py  tokens.py  utils.py
src/jwtauth/migrations/: 0001_initial.py
tests/: conftest.py  test_auth.py  test_tokens.py
tests/sample_app/: pyproject.toml
tests/sample_app/sample_app/: asgi.py  settings.py  urls.py  wsgi.py
tests/sample_app/test_app/: __init__.py
tests/test_views/: urls.py  views.py
