[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jwtauth"]

[project]
name = "drf-cookie-jwtauth"
version = "0.0.5"
authors = [
  { name="Lorenzo Celli", email="lorenzo.celli00@gmail.com" },
]
description = "JWT-based authentication for Django REST Framework"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "Django~=5.0.2",
  "PyJWT~=2.8.0",
  "djangorestframework~=3.14.0",
]

[tool.black]
line-length = 100