[tool.poetry]
name = "drf-cookie-jwtauth"
version = "0.0.7"
description = "JWT-based authentication for Django REST Framework"
authors = ["LorenzoCelli <lorenzo.celli00@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "jwtauth", from="src" }
]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=5.0.2"
PyJWT = ">=2.8.0"
djangorestframework = "^3.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff]
line-length = 120